<resources>
    <string name="app_name">TRU Eng. Planner</string>
    <string name="MainActivitytextView1">TRU</string>
    <string name="SplashScreentextView1">group1</string>
    <string name="MainActivitybtn1">Make a Plan</string>
    <string name="MainActivitybtn2">Quick View</string>
    <string name="title_activity_quick_view">QuickView</string>
    <string name="courseInfoTextView">Course Info</string>

    <string name="yearScreenTextView">What year of university are you in?</string>
    <string name="yearNextBtn">Next</string>
    <string name="yearRadioBtn">First Year</string>
    <string name="yearRadioBtn2">Second Year</string>
    <string name="yearRadioBtn3">Third Year</string>
    <string name="yearRadioBtn4">Fourth Year</string>
    <string name="yearRadioBtn5">Fifth Year</string>


    <string name="passFailNextBtn">Next</string>

    <string name="action_settings">Settings</string>
    <string name="coursename">CourseName</string>
    <string name="offering">Offering</string>
    <string name="prlist">PRList</string>
    <string name="tolist">ToList</string>
...
