...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d2d2d"
    tools:context=".MakeAPlan.NumberOfCoursesScreen">

    <RadioGroup
        android:id="@+id/courseNoRadioGroup1"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:background="#2d2d2d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginBottom="16dp"
            android:text="4 Courses"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/courseNoRadioBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="16dp"
            android:text="5 Courses"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/courseNoRadioBtn4"
            android:layout_width="match_parent"
...
            android:text="7 Courses"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/courseNoNextBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
...
